--- a/pytracker/app/templates/search_results.html
+++ b/pytracker/app/templates/search_results.html
@@ -13,14 +13,14 @@
         Results for: <span class="term">'{{terms}}'</span>
       </div>
       {% for torrent in results %}
-      <div class="result">
+        <div class="result">
         <div class="header">
-          <a class="magnet" href="magnet:?xt=urn:btih:{{torrent.infohash}}"><img src="{{static_prefix}}img/magnet.png"></img></a>
-          <a class="download" href="{{torrent.downloadURL}}"><img src="{{static_prefix}}img/download.png"></img></a>
-          <a class="title" href="{{torrent.infoURL}}">{{torrent.title}}</a>
+          <a class="magnet" href="{{torrent.magnet()}}"><img src="{{static_prefix}}img/magnet.png"></img></a>
+          <a class="download" href="{{torrent.downloadURL()}}"><img src="{{static_prefix}}img/download.png"></img></a>
+          <a class="title" href="{{torrent.infoURL()}}">{{torrent.title}}</a>
         </div>
         <div class="summary">
-          {{torrent.summary}}
+          {{torrent.summary()}}
         </div>
       </div>
     {% endfor %}
