--- a/pytracker/app/templates/torrent.html
+++ b/pytracker/app/templates/torrent.html
@@ -6,6 +6,9 @@
     <a href="{{torrent.downloadURL()}}">download</a>
     <a href="{{torrent.magnet()}}">magnet</a>
     </div>
+    <div class="uploaded">
+      Uploaded: {{torrent.uploadDate()}}
+    </div>
     <div class="files">
       <p> Files: </p>
       <ul>
