--- a/pytracker/app/templates/search.html
+++ b/pytracker/app/templates/search.html
@@ -3,7 +3,7 @@
   <header>
     <div id="front">
       <img src="{{static_prefix}}img/front.png"></img>
-      <form action="{{site_prefix}}search">
+      <form action="{{site_prefix}}search/0">
         <input class="search" name="q"></input>
         <input class="submit" type="submit" value="search"></input>
       </form>
