--- a/pytracker/app/templates/index.html
+++ b/pytracker/app/templates/index.html
@@ -1,21 +1,27 @@
 {% extends "search.html" %}
+{% block head %}
 
+
+{% endblock %}
 {% block torrents %}
-<ul class="categories">
+<div class="categories">
+  Torrent Categories:
+</div>
+<div class="categorylist">
 {% for cat in categories %}
-<li class="category">
+<div class="category">
   <a href="{{site_prefix}}cat/{{cat.name}}/0">{{cat.name}}</a>
-</li>
+</div>
 {% endfor %}
-</ul>
+</div>
+<div class="uploads">Recently uploaded:</div>
 <div class="uploaded">
-  <div>Recently uploaded:</div>
-  <ul>
     {% for torrent in torrents %}
-    <li>
-      <a href="{{site_prefix}}{{torrent.infoURL()}}">{{torrent.title}}</a> (uploaded {{torrent.uploadDate()}})
-    </li>
+    <div class="upload">
+      <span><a href="{{site_prefix}}{{torrent.infoURL()}}">{{torrent.title}}</a></span>
+      <span>(uploaded {{torrent.uploadDate()}})</span>
+    </div>
   {% endfor %}
-  </ul>
+  </div>
 </div>
 {% endblock %}
