* fix search url in template

--- a/pytracker/app/templates/search_results.html
+++ b/pytracker/app/templates/search_results.html
@@ -22,7 +22,7 @@
       <a href="{{next_page}}">next</a>
     </div>
   {% endif %}
-  <form action="{{site_prefix}}search" class="navbaritem">
+  <form action="{{site_prefix}}search/0" class="navbaritem">
     <input class="search" name="q"></input>
     <input class="submit" type="submit" value="search"></input>
   </form>
